# cpp_sem10_task1

./: .gitignore  05.05.cpp  05.05.out  07.01.out  07.02.cpp  07.02.out  07.03.txt  07.04.out  07.05.cpp  07.05.out  08.01.out  08.02.out  08.03.out  08.04.out  08.05.out  README.md
06.05/: CMakeLists.txt  input.txt  run.sh
task_1/: 07.01.cpp  07.04.cpp  08.01.cpp  08.02.cpp  08.03.cpp  08.04.cpp  08.05.cpp  comments.txt
task_1/06.05/: 06.05.cpp  lib1.cpp  lib2.cpp
task_2/: 09.01.cpp  09.02.cpp  09.03.cpp  09.04.cpp  09.05.cpp  09.06.cpp  09.07.cpp  09.08.cpp  09.09.cpp  09.10.cpp  10.01.cpp  10.03.cpp  10.04.cpp  10.04_justification.md  10.05.cpp  11.01.cpp  11.03.cpp  README.md
task_2/10.05_results/: 10.05_justification.md  collision_results.csv  for_plot_10_05.py
